# backend/swagger.json
@@ -25,18 +25,11 @@
         }
       }
     },
-    "/api-docs/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/brands/": {
       "get": {
+        "tags": [
+          "Brands"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -48,6 +41,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Brands"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -61,6 +57,9 @@
     },
     "/brands/{id}": {
       "get": {
+        "tags": [
+          "Brands"
+        ],
         "description": "",
         "parameters": [
           {
@@ -80,6 +79,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Brands"
+        ],
         "description": "",
         "parameters": [
           {
@@ -99,6 +101,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Brands"
+        ],
         "description": "",
         "parameters": [
           {
@@ -120,6 +125,9 @@
     },
     "/categories/": {
       "get": {
+        "tags": [
+          "Categories"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -131,6 +139,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Categories"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -144,6 +155,9 @@
     },
     "/categories/{id}": {
       "get": {
+        "tags": [
+          "Categories"
+        ],
         "description": "",
         "parameters": [
           {
@@ -163,6 +177,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Categories"
+        ],
         "description": "",
         "parameters": [
           {
@@ -182,6 +199,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Categories"
+        ],
         "description": "",
         "parameters": [
           {
@@ -203,6 +223,9 @@
     },
     "/shoes/": {
       "get": {
+        "tags": [
+          "Shoes"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -214,6 +237,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Shoes"
+        ],
         "description": "",
         "responses": {
           "201": {
@@ -227,6 +253,9 @@
     },
     "/shoes/{id}": {
       "get": {
+        "tags": [
+          "Shoes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -246,6 +275,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Shoes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -265,6 +297,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Shoes"
+        ],
         "description": "",
         "parameters": [
           {
